ingress.yml
cat <<EOF | kubectl apply -f -
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: argocd.wsiqueira.cloud
    external-dns.alpha.kubernetes.io/target: 52ba8e90-d83c-47ce-8187-4a0e710637fa.cfargotunnel.com
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.wsiqueira.cloud
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
EOF

cat <<EOF | kubectl apply -f -
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: jenkins.wsiqueira.cloud
    external-dns.alpha.kubernetes.io/target: 52ba8e90-d83c-47ce-8187-4a0e710637fa.cfargotunnel.com
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.wsiqueira.cloud
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
EOF
